Issue #5: Define DB table to identify each badminton court uniquely
Did more out-of-scope work.

Added many db tables - ir_balance, ir_booking, ir_booking_slots,
ir_campus, ir_court, ir_court_offers, ir_recharge_offers, ir_register_offers.
Removed table ir_playtime.  Added a foreign key constraint from ir_people
to ir_register_offers.

--- a/HOWTO.html
+++ b/HOWTO.html
@@ -26,7 +26,7 @@ As MySQL root user:
 
 <pre>
 mysql> CREATE DATABASE kdb;
-mysql> CREATE USER 'queen'@'localhost' IDENTIFIED BY '/C0rona+V1rus/';
+mysql> CREATE USER 'queen'@'localhost' IDENTIFIED BY 'dummy';
 mysql> GRANT ALL ON kdb.* TO 'queen'@'localhost' WITH GRANT;
 mysql> GRANT PROCESS ON *.* TO 'queen'@'localhost';
 </pre>
@@ -39,7 +39,7 @@ mysql> GRANT PROCESS ON *.* TO 'queen'@'localhost';
  database used by the iragu webapp.
   <blockquote> NOTE: Just for a valid SQL statement I have provided a password
   here. Kindly change it while using it. </blockquote>
-  <pre> mysql> CREATE USER 'queen'@'localhost' IDENTIFIED BY '/C0rona+V1rus/';
+  <pre> mysql> CREATE USER 'queen'@'localhost' IDENTIFIED BY 'dummy';
   </pre> </li>
 
  <li> Grant all privileges to the non-root MySQL user 'queen' on the kdb
